[package]
name = "skysold"
version = "0.4.1"
authors = ["Scotow <contact@scotow.com>"]
edition = "2018"

[workspace]
members = ["crates/core"]

[[bin]]
path = "src/main.rs"
name = "skysold"

[dependencies]
lib = { path = "crates/core", package = "skysold-lib" }
nustify = { git = "https://github.com/scotow/nustify", tag = "0.2.1" }
tokio = {version = "1.2", features = ["macros", "time"] }
uuid = { version = "0.8", features = ["serde"] }
num-format = "0.4"
structopt = "0.3"

[dev-dependencies]
uuid = { version = "0.8", features = ["v3"] }