[package]
name = "skysold-lib"
version = "0.2.0"
authors = ["Scotow <contact@scotow.com>"]
edition = "2018"

[dependencies]
isahc = { version = "1.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde"] }
base64 = "0.13"
hematite-nbt = "0.5"
thiserror = "1.0"