[package]
name = "skysold-lib"
version = "0.4.1"
authors = ["Scotow <contact@scotow.com>"]
edition = "2018"

[dependencies]
base64 = "0.13"
thiserror = "1.0"
serde_json = "1.0"
hematite-nbt = "0.5"
uuid = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }